...

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_name_layout"
        android:paddingTop="12dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_enter_name"
            android:id="@+id/locationName"
            android:maxLength="@string/max_length_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
...
