...
    <string name="max_length_description">1000</string>

    <!-- Error messages -->
    <string name="error_title_empty">The title can not be empty !</string>
    <string name="error_title_duplicated">This title is already taken !</string>
    <string name="error_title_contains_contributors_separator">"You cannot enter a title containing "</string>
    <string name="error_location_name_empty">The location name can not be empty !</string>
    <string name="error_location_name_duplicated">You can\'t use the same name for 2 locations !</string>
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="error_authentication_canceled">Authentication canceled.</string>


    <!-- Buttons description-->
    <string name="done_task_description">Done !</string>
...
