...
        android:layout_alignParentTop="true"
        android:theme="@style/ActionBar">

        <ImageButton
            android:src="@drawable/ic_done_white_36dp"
            android:contentDescription="@string/done_task_description"
            android:id="@+id/edit_done_button_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_gravity="end"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
...
