...
                android:id="@+id/task_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ActionBar">

                <ImageButton
                    android:id="@+id/edit_done_button_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@null"
                    android:contentDescription="@string/done_task_description"
                    android:paddingEnd="10dp"
...
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="normal"
                    android:theme="@style/ActionBar" />

                <EditText
                    android:id="@+id/title_task"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_title"
                    android:inputType="textPersonName|textCapSentences"
...
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <EditText
                                android:id="@+id/description_task"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="20dp"
                                android:layout_marginRight="20dp"
                                android:gravity="top"
                                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
...
