...
            android:id="@+id/title_task_containter_information_activity"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/information_banner">

            <TextView
                android:id="@+id/title_task_information_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingTop="6dp"
                android:textColor="@color/white"
                android:textSize="30sp"
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <!--MarginRight to support older versions than API 17-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="145dp"
...
